iac/kustomize/base/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: apps
spec:
  selector:
    app: portal
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
